# fast_sdl2cpp

./: .clang-format  CMakeLists.txt  README.md
cmake/: fast_sdl2cpp-config.cmake.in
include/fast_sdl2cpp/: blend_factor.hpp  blend_mode.hpp  blend_operation.hpp  clipboard.hpp  cpu_info.hpp  custom_blend_mode.hpp  error.hpp  platform.hpp  simd.hpp  subsystems.hpp  system.hpp
include/fast_sdl2cpp/detail/: types.hpp
